--- a/src/Main.css
+++ b/src/Main.css
@@ -9,20 +9,38 @@ body{
 }
 a{
     font-size: 60px;
-    color: #00b173;
+    color: #00ffa6;
 }
+
 .fa-archive{
     margin-bottom: 50px;
+}
+
+
+.fa-spotify{
+    color: #1DB954;
+}
+.fa-facebook-square{
+    color: #4267B2;
+}
+.fa-instagram{
+    color: #E1306C;
 }
 
 .Textonem{
     margin-top: 200px;
     margin-left: 350px ;
+
 }
+
 h1{
+    text-shadow: -1.5px -1.5px 0 #0ff,1.5px 1.5px 0 #f00;
+    text-shadow: 1.5px 1.5px 0 #0ff,-1.5px -1.5px 0 #f00;
+
+
     font-family: "Old English Text MT";
-    font-size: 70px;
-    color: #00b173;
+    font-size: 75px;
+    color: #000000;
 }
 .nejakysracky{
     font-family: "Arial Black";
@@ -46,6 +64,7 @@ ul {
     padding: 0;
 }
 
+
 nav {
     background-color: #000000;
     height: 100vh;
@@ -57,6 +76,3 @@ nav {
     position: fixed;
 }
 
-.page {
-    display: flex;
-}
