--- a/src/Main.css
+++ b/src/Main.css
@@ -15,8 +15,6 @@ a{
 .fa-archive{
     margin-bottom: 50px;
 }
-
-
 .fa-spotify{
     color: #1DB954;
 }
@@ -26,13 +24,10 @@ a{
 .fa-instagram{
     color: #E1306C;
 }
-
 .Textonem{
     margin-top: 200px;
     margin-left: 350px ;
-
 }
-
 h1{
     text-shadow: -1.5px -1.5px 0 #0ff,1.5px 1.5px 0 #f00;
     text-shadow: 1.5px 1.5px 0 #0ff,-1.5px -1.5px 0 #f00;
@@ -42,6 +37,7 @@ h1{
     font-size: 75px;
     color: #000000;
 }
+
 .nejakysracky{
     font-family: "Arial Black";
     font-size: 26px;
@@ -54,6 +50,8 @@ h1{
     height: 569px;
     width:  930px;
 }
+
+
 .zarovnavacidiv{
     display: flex;
     justify-content: left;
@@ -64,7 +62,6 @@ ul {
     padding: 0;
 }
 
-
 nav {
     background-color: #000000;
     height: 100vh;
@@ -74,5 +71,44 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     position: fixed;
+}
+
+.DivMenu{
+    display: none;
+}
+.dropdown{
+    display: none;
+}
+
+@media screen and (max-width: 1000px){
+
+    .Menu li .imenu:hover{
+        display: inline-block;
+    }
+    .imenu .dropdown{
+    background-color: #ff0000;
+    }
+    .dropdown{
+    display: none;
+    }
+    .imenu{
+        margin: 25px;
+        padding: 0;
+        color: #00ffa6;
+        font-size: 60px;
+    }
+
+    .DivMenu{
+        margin: 100px;
+        display: inline-block;
+        background-color: #2b2b2b;
+    }
+
+    nav {
+        flex-direction: column ;
+    }
+    .zbytek{
+        display: none;
+    }
 }
 
