--- a/src/ResNav.css
+++ b/src/ResNav.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #2b2b2b;
+    background-color: #000000;
 }
 .nav {
     margin: 0;
@@ -22,7 +22,6 @@ body{
     text-decoration: none;
 }
 
-
 .nav a.activ {
     color: #ffffff;
 }
@@ -42,12 +41,9 @@ div.content {
 .dropbender{
     display: none;
 }
-
-
 .dropbender:hover .text2 {
     display: block;
 }
-
 
 @media screen and (max-width: 800px) {
     .nav {
@@ -58,35 +54,32 @@ div.content {
     .nav a {
         display: inline-block
     }
+    .dropbender:hover .text2 {
+        display: block;
+    }
     .Menu{
         display: inline-block;
+        margin-top: 25px;
+        margin-right: 30px;
         position: fixed;
         right: 0;
         top: 0;
-        margin-top: 25px;
-        margin-right: 30px;
     }
     .dropbender {
         position: relative;
         display: inline-block;
-
+    }
+    .text1{
+        display: none;
     }
     .text2 {
         display: none;
+        padding: 12px 16px;
+        margin-top: 40px;
         position: fixed;
         background-color: #000000;
-        min-width: 160px;
-        padding: 12px 16px;
+        min-width: 200px;
         right: 0;
         top: 0;
-        margin-top: 40px;
-    }
-
-    .dropbender:hover .text2 {
-        display: block;
-    }
-
-    .text1{
-        display: none;
     }
 }
